--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@angular/platform-browser": "~19.1.0",
     "@angular/platform-browser-dynamic": "~19.1.0",
     "@angular/router": "~19.1.0",
-    "flexi-grid": "^19.0.41",
+    "flexi-button": "^19.0.15",
+    "flexi-grid": "^19.0.45",
+    "flexi-popup": "^19.0.19",
+    "flexi-select": "^19.0.4",
     "flexi-stepper": "^19.0.6",
     "flexi-toast": "^19.0.3",
     "form-validate-angular": "^19.0.1",
